# TextureAnimation

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/arm/malideveloper/openglessdk/textureanimation/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FPSCounter.cpp  FPSCounter.h  Texture.cpp  Texture.h  TextureAnimation.cpp  textureanimation.cpp
app/src/main/java/com/arm/malideveloper/openglessdk/textureanimation/: MainActivity.java  NativeLibrary.java  TutorialView.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/arm/malideveloper/openglessdk/textureanimation/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
